--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,5 +1,5 @@
 @if(isAddTask){
-    <app-new-task (cancel)="onCancelAddTask()"/>
+    <app-new-task (cancel)="onCancelAddTask()" (add)="onAddTask($event)"/>
 }
 <section id ="tasks">
     <header>
