--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,5 +1,5 @@
 @if(isAddTask){
-    <app-new-task (cancel)="onCancelAddTask()" (add)="onAddTask($event)"/>
+    <app-new-task [userId] = "userId" (close)="onCloseAddTask()"/>
 }
 <section id ="tasks">
     <header>
@@ -11,7 +11,7 @@
 
     <ul>
         @for(task of SelectedUserTasks; track task.id){
-            <li><app-task [task] = "task" (complete)="onCompleteTask($event)"></app-task></li>
+            <li><app-task [task] = "task" ></app-task></li>
         }
     </ul>
 </section>
